スキルの編集とfontオーサムの追加

--- a/style.css
+++ b/style.css
@@ -196,18 +196,17 @@
     justify-content: center;
 }
 
-#web, #cpp {
+#web, #cpp, #xd, #py {
     margin-bottom: 80px;
 }
 
 
-#xd, #py {
+#php, #sql {
     margin-bottom: 150px;
 }
 
 .skill-other {
     width: 80%;
-    /* background-color: palegoldenrod; */
     margin: auto;
     border-top: solid 1px #D1D1D1;
     color: #494949;
@@ -221,6 +220,23 @@
 
 .work {
     padding-bottom: 100px;
+}
+
+.work i {
+    margin: 0px 5px;
+    font-size: 25px;
+}
+
+#github-icon {
+    color: #0066c0;
+    font-size: 55px;
+    margin-left: 10px;
+    transition: all 300ms ease;
+}
+
+#github-icon:hover {
+    padding-left: 5px;
+    color: rgb(50, 175, 224);
 }
 
 .slack-parent, .port-parent, .brain-parent {
@@ -254,12 +270,12 @@
 
 #brain-text a {
     text-decoration: none;
-    color: #5E83BF;
+    color: #0066c0;
     transition: all 300ms ease;
 }
 
 #brain-text a:hover {
-    color: rgb(162, 176, 201);
+    color: rgb(50, 175, 224);
 }
 
 .work h4 {
@@ -435,11 +451,11 @@
         margin: 5px;
     }
 
-    #xd, #py {
+    #xd, #py, #web, #cpp {
         margin-bottom: 120px;
     }
 
-    #web, #cpp {
+    #php, #sql {
         margin-top: 30px;
     }
 
